penambahan js utk open search box

--- a/HomePage.css
+++ b/HomePage.css
@@ -33,7 +33,7 @@ body{
 }
 
 
-  
+
 .Hamburger-Btn::before,
 .Hamburger-Btn::after{
     content: "";
@@ -123,6 +123,9 @@ body{
     font-size: 50px;
     cursor: pointer;
     height: 60px;
-    border-radius: 60%;       
+    border-radius: 60%;
 }
 
+.search-trans {
+    display: block;
+}
