Ubah warna jadi red

--- a/HomePage.css
+++ b/HomePage.css
@@ -95,7 +95,7 @@ body{
     display: inline-block;
 }
 .Icon-Back{
-    color: white;
+    color: red;
     font-size: 40px;
     display: inline-block;
     padding-top: 10px;
