--- a/CSS/HomePage.css
+++ b/CSS/HomePage.css
@@ -6,10 +6,10 @@ body{
 
 .Template-Header{
     width: 100%;
-    height: 150px;
+    height: 10%;
     display: flex;
     flex-direction: row;
-    padding: 20px 40px;
+    padding: 10px 20;
 }
 
 .Menu-Btn{
@@ -18,14 +18,16 @@ body{
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    /*padding-top:10px;*/
-    transition: all 2s ease-in-out;
-    min-width: 15%;
+    /* padding-top: 10px; */
+    transition: all 2s ease-in-out; 
+    min-width: 17%;
+    height: 60px;
 }
 
+
 .Hamburger-Btn{
-    width: 70px;
-    height: 7px;
+    width: 35px;
+    height: 4px;
     background-color: rgb(153, 151, 151);
     border-radius: 15%;
     transition: all 2s ease-in-out;
@@ -35,11 +37,12 @@ body{
 .Hamburger-Btn::after{
     content: "";
     position: absolute;
-    width: 80px;
-    height: 7px;
+    width: 40px;
+    height: 4px;
     background-color: rgb(153, 151, 151);
     border-radius: 15%;
     transition: all 2s ease-in-out;
+
 }
 
 .Hamburger-Btn::before{
@@ -62,55 +65,46 @@ body{
 .Menu-Btn.Open .Hamburger-Btn::after{
     transform: rotate(-45deg) translate(35px,35px);
 }
+
 .Layout-Logo{
     text-align: center;
-    padding-top: 10px;
-    width: 72%;
-    height: 40%;
-}
-
-
-.Logo{
-    color: white;
-    position: relative;
-    font-weight: bold;
-    font-size: 50px;
+    padding-top: 0px;
+    padding-bottom: 20px;
+    width: 70%;
     height: 52%;
 }
 
 .Logo-Gambar{
     width: 24%;
-    height: 629%;
 }
 .Layout-Search{
-    min-width: 33%;
-    padding: 20px 0px;
-    text-align: right;
-    display: none;
+       padding: 15px 0px;
+       min-width: 42%;
+       text-align: right;
+        display: none;
 }
 .Layout-Icon-Back{
-    width: 50px;
     display: inline;
-    vertical-align: top;
+    vertical-align: middle;
 }
 .Search-Menu{
-    background: rgb(104, 103, 103);
-    width: 62%;
+    background: rgb(58, 58, 58);
+    width: 76%;
     display: inline-block;
 }
 .Icon-Back{
     color: rgb(49, 155, 182);
-    font-size: 40px;
+    font-size: 25px;
     display: inline-block;
-    padding-top: 10px;
 }
 .Search-Input{
     background: rgb(58, 58, 58);
-    height: 50px;
+    height: 20px;
     border: none;
     outline: none;
     color: white;
-    border-right:2px rgb(49, 155, 182) solid;
+    width: 100%;
+    border-right: 2px rgb(49, 155, 182) solid;
 }
 .Search-Input::placeholder{
     color: rgb(138, 136, 136);
@@ -118,9 +112,10 @@ body{
 .Layout-Icon-Search{
     display: inline;
     text-align: right;
-    min-width: 6%;
-    height: 50px;
-    margin-top: 20px;
+    width: 7%;
+    height: 38%;
+    margin-top: 15px;
+    border-radius: 10%;
 }
 .Background-Search{
     background-color:rgb(58, 58, 58) ;
@@ -128,9 +123,9 @@ body{
 
 .Icon-Search{
     color: rgb(49, 155, 182);
-    font-size: 50px;
+    font-size: 23px;
     cursor: pointer;
-    height: 60px;
+    height: 22px;
     border-radius: 60%;
 }
 .search-Open {
@@ -143,7 +138,7 @@ body{
 .seperate-main{
     width: 100%;
     border-top:2px rgb(24, 220, 255) solid;
-    height: 100px;
+    height: 40px;
     background-color: rgba(102, 100, 100, 0.205);
 }
 
@@ -154,14 +149,19 @@ body{
     height: 100%;
     background-color: rgb(63 63 63);
     position: absolute;
-    /* left: 25%; */
-    top: 7.5%;
+    left: -60%; 
+    top: 10.3%;
+    transition: all 1s;
+}
+
+.SlideTransition{
+    left: 0%;
 }
 
 .Layout-Slidebar{
     width: 100%;
     height: 100%;
-    padding: 20px 40px;
+    padding: 10px 20px;
 }
 
 .Layout-Halaman{
@@ -184,12 +184,15 @@ body{
 
 .Layout-TextHalaman{
     display: inline-block;
-    width: 70%;
-    font-size: 45px;
+    width: 72%;
+    font-size: 17px;
     color: rgb(153, 151, 151);
-    padding-top: 15px;
+    padding-top: 5px;
 }
 
 .Space-Halaman{
-    margin-bottom: 75px;
+    margin-bottom: 46px;
 }
+
+
+
