--- a/CSS/HomePage.css
+++ b/CSS/HomePage.css
@@ -6,7 +6,7 @@ body{
 
 .Template-Header{
     width: 100%;
-    height: 10%;
+    height: 75px;
     display: flex;
     flex-direction: row;
     padding: 10px 20;
@@ -113,7 +113,7 @@ body{
     text-align: right;
     width: 11%;
     height: 38%;
-    margin-top: 15px;
+    margin-top: 15.8px;
     border-radius: 10%;
 }
 .Background-Search{
@@ -140,7 +140,28 @@ body{
     height: 40px;
     background-color: rgba(102, 100, 100, 0.205);
 }
+main{
+    width: 100%;
+    height: 100%;
+}
 
+/* Section untuk Anime populer terbaru */
+.Layout-AnimePopuler{
+    width: 100%;
+    height: 40px;
+    background-color: #458899;
+    padding: 5px 5px;
+    display: flex;
+}
+.Layout-Text-AnimePopuler{
+    height: 100%;
+    width: 40%;
+    padding-top: 5px;
+}
+.Text-AnimePopuler{
+    font-size: 13px;
+    color: rgb(36, 34, 34);
+}
 /*-----SIDEBAR MENU------------*/
 
 .Sidebar{
@@ -163,6 +184,11 @@ body{
     padding: 10px 20px;
 }
 
+a{
+    text-decoration: none;
+}
+
+/* Layout Halaman Slidebar */
 .Layout-Halaman{
     width: 100%;
     height: 5%;
@@ -176,22 +202,37 @@ body{
     display: inline-block;
     margin-right: 10%;
 }
-
 .Icon-Halaman{
-    fill: rgb(153, 151, 151);
+    fill: rgb(147 147 147);
 }
-
 .Layout-TextHalaman{
     display: inline-block;
-    width: 72%;
+    width: 83%;
     font-size: 17px;
-    color: rgb(153, 151, 151);
+    color:rgb(147 147 147);
     padding-top: 5px;
 }
 
+/* .focus-HalamanUtama:focus{
+    
+    fill: whitesmoke !important;
+    color: whitesmoke !important;
+} */
+/* ----------------------------------------- */
+
+/* Sytyling focus menu halaman utama */
+.HalamanUtama-Focus{
+    fill:whitesmoke ;
+}
+.Text-HalamanUtama-Focus{
+    color: white;
+    font-weight: bold;
+}
+/* --------------------- */
 .Space-Halaman{
     margin-bottom: 46px;
 }
+
 
 
 
